--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,17 @@ dependencies:
   file: ^5.2.0
   path_provider: ^1.6.11
   audioplayers: ^0.15.1
+  tutorial_coach_mark: ^0.5.1
+  share: ^0.6.4+3
+  twitter_api: ^0.1.2
+  flutter_svg: ^0.18.1
+
+  get: ^3.5.1
+  flutter_screenutil: ^2.3.1
+
+  cloud_firestore: ^0.14.0+2
+  firebase_core: ^0.5.0
+  firebase_auth: ^0.18.0+1
 
 dev_dependencies:
   flutter_test:
